--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,6 +5,9 @@ workflows:
     environment:
       vars:
         BUNDLE_ID: "com.mondomaine.lejeuneperefils"
+        APP_STORE_KEY_ID: ZV8WH5HF9X
+        APP_STORE_ISSUER_ID: 46d4a030-cbad-4ff9-a8e9-8e15b157646b
+        APP_STORE_PRIVATE_KEY: Environnement sécurisé (pas dans ce fichier)
       flutter: stable
       xcode: latest
     triggering:
@@ -17,8 +20,9 @@ workflows:
         script: flutter build ios --release --no-codesign
     artifacts:
       - build/ios/iphoneos/*.app
-
     publishing:
       app_store_connect:
-        api_key: Lejeune_Père_et_fils
+        key_id: $APP_STORE_KEY_ID
+        issuer_id: $APP_STORE_ISSUER_ID
+        private_key: $APP_STORE_PRIVATE_KEY
         submit_to_testflight: true
