--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,29 +3,29 @@ workflows:
     name: Build iOS app
     max_build_duration: 60
     environment:
-      vars:
-        BUNDLE_ID: "com.mondomaine.lejeuneperefils"
       flutter: stable
       xcode: latest
-      groups:
-        - app_store_credentials # ← Ce groupe contient les secrets ci-dessous
-
+      vars:
+        BUNDLE_ID: "com.mondomaine.lejeuneperefils"
+        APP_STORE_CONNECT_KEY: |
+          -----BEGIN PRIVATE KEY-----
+          (ton contenu de clé privée ici)
+          -----END PRIVATE KEY-----
+        APP_STORE_CONNECT_KEY_ID: ZV8WH5HF9X
+        APP_STORE_CONNECT_ISSUER_ID: 46d4a030-cbad-4ff9-a8e9-8e15b157646b
     triggering:
       events:
         - push
-
     scripts:
       - name: Get Flutter packages
         script: flutter pub get
       - name: Build iOS release
         script: flutter build ios --release --no-codesign
-
     artifacts:
       - build/ios/iphoneos/*.app
-
     publishing:
       app_store_connect:
-        api_key: $APP_STORE_CONNECT_KEY          # ta clé privée complète
-        key_id: $APP_STORE_CONNECT_KEY_ID        # ex : ZV8WH5HF9X
-        issuer_id: $APP_STORE_CONNECT_ISSUER_ID  # ex : 46d4a030-cbad-4ff9-a8e9-8e15b157646b
+        api_key: APP_STORE_CONNECT_KEY
+        key_id: APP_STORE_CONNECT_KEY_ID
+        issuer_id: APP_STORE_CONNECT_ISSUER_ID
         submit_to_testflight: true
