--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -7,25 +7,26 @@ workflows:
       xcode: latest
       vars:
         BUNDLE_ID: "com.mondomaine.lejeuneperefils"
-        APP_STORE_CONNECT_KEY: |
-          -----BEGIN PRIVATE KEY-----
-          (ta clé ici)
-          -----END PRIVATE KEY-----
-        APP_STORE_CONNECT_KEY_ID: ZV8WH5HF9X
-        APP_STORE_CONNECT_ISSUER_ID: 46d4a030-cbad-4ff9-a8e9-8e15b157646b
+      groups:
+        - app_store_credentials
+
     triggering:
       events:
         - push
+
     scripts:
       - name: Get Flutter packages
         script: flutter pub get
+
       - name: Build IPA
         script: flutter build ipa --release
+
     artifacts:
       - build/ios/ipa/*.ipa
+
     publishing:
       app_store_connect:
-        api_key: APP_STORE_CONNECT_KEY
-        key_id: APP_STORE_CONNECT_KEY_ID
-        issuer_id: APP_STORE_CONNECT_ISSUER_ID
+        api_key: APP_STORE_API_KEY
+        key_id: APP_STORE_KEY_ID
+        issuer_id: APP_STORE_ISSUER_ID
         submit_to_testflight: true
