--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,14 +2,13 @@ workflows:
   ios-workflow:
     name: Build iOS app
     max_build_duration: 60
+    variable_groups: # <== BONNE INDENTATION
+      - app_store_credentials
     environment:
       flutter: stable
       xcode: latest
       vars:
         BUNDLE_ID: "com.mondomaine.lejeuneperefils"
-      # 👇 AJOUTEZ CETTE LIGNE CI-DESSOUS 👇
-      variable_groups:
-        - app_store_credentials 
     scripts:
       - name: Get Flutter packages
         script: flutter pub get
