--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,7 +2,7 @@ workflows:
   ios-workflow:
     name: Build iOS app
     variable_groups:
-      - app_store_credentials # ✅ C'est le seul groupe dont vous avez besoin
+      - app_store_credentials
     environment:
       flutter: stable
       xcode: latest
